--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node solid",
-    "build": "node solid production"
+    "build": "node solid production",
+    "github-publish": "npm run build && gh-pages -d dist"
   },
   "author": "Alexis Bouhet",
   "license": "MIT",
   "devDependencies": {
     "@zouloux/files": "^0.6.0",
     "cssnano": "^4.1.7",
+    "gh-pages": "^2.0.1",
     "less": "^3.8.1",
     "parcel-bundler": "^1.10.3",
     "typescript": "^3.1.6"
